# packages/api/src/controllers/auth.rest.ts
@@ -1,7 +1,7 @@
 import type { ApiRoute } from "../types/controllers.rest";
 import * as User from "../models/user";
 import * as AuthToken from "../models/auth-token";
-import type { AuthSuccess, ApiError } from "../types/models";
+import type { Auth, ApiError } from "../types/models";
 import { isValidAuthSign } from "../utils/type-guards";
 
 export const authSign: ApiRoute<"/auth/sign"> = {
@@ -9,7 +9,7 @@ export const authSign: ApiRoute<"/auth/sign"> = {
   method: "post",
   action: async ({ body }) => {
     let status: 200 | 400;
-    let data: AuthSuccess | ApiError;
+    let data: Auth | ApiError;
 
     if (isValidAuthSign(body)) {
       try {
@@ -40,6 +40,47 @@ export const authSign: ApiRoute<"/auth/sign"> = {
     return {
       status,
       data,
+    };
+  },
+};
+
+export const validate: ApiRoute<"/auth/validate"> = {
+  endpoint: "/auth/validate",
+  method: "post",
+  action: async ({ headers }) => {
+    const authData = await AuthToken.getData(headers.authorization);
+
+    return {
+      status: authData.error ? 400 : 200,
+      data: authData.error
+        ? {
+            description: authData.error,
+          }
+        : {
+            valid: authData.valid,
+          },
+    };
+  },
+};
+
+export const refresh: ApiRoute<"/auth/refresh"> = {
+  endpoint: "/auth/refresh",
+  method: "post",
+  action: async ({ headers }) => {
+    const authData = await AuthToken.getData(headers.authorization);
+
+    const authToken =
+      authData.user?.id && authData.valid
+        ? await AuthToken.create(authData.user.id)
+        : undefined;
+
+    return {
+      status: authToken ?? authData.error ? 200 : 400,
+      data: authToken
+        ? { authToken: authToken.value }
+        : {
+            description: authData.error ?? "Unable to refresh token",
+          },
     };
   },
 };
