# packages/api/src/controllers/user.rest.ts
@@ -1,12 +1,11 @@
 import type { ApiRoute } from "../types/controllers.rest";
 import * as AuthToken from "../models/auth-token";
-import * as User from "../models/user";
 
 export const user: ApiRoute<"/user"> = {
   endpoint: "/user",
   method: "get",
   action: async ({ headers }) => {
-    const authData = await AuthToken.validate(headers.authorization);
+    const authData = await AuthToken.getData(headers.authorization);
 
     if (!authData.authToken || Boolean(authData.error) || !authData.valid) {
       return {
@@ -17,20 +16,7 @@ export const user: ApiRoute<"/user"> = {
       };
     }
 
-    const userId = await AuthToken.getUserId(authData.authToken);
-
-    if (!userId) {
-      return {
-        status: 400,
-        data: {
-          description: "User not found",
-        },
-      };
-    }
-
-    const user = await User.getById(userId);
-
-    if (!user) {
+    if (!authData.user) {
       return {
         status: 400,
         data: {
@@ -42,8 +28,8 @@ export const user: ApiRoute<"/user"> = {
     return {
       status: 200,
       data: {
-        id: user.id,
-        username: user.username,
+        id: authData.user.id,
+        username: authData.user.username,
       },
     };
   },
