# packages/api/src/models/auth-token.ts
@@ -1,7 +1,16 @@
 import { getDatabase } from "../db";
-import type { AuthToken, UserPrivate } from "../types/models";
+import type { AuthToken, UserPrivate, UserPublic } from "../types/models";
+import * as User from "./user";
 import cryptoJs from "crypto-js";
 import crypto from "node:crypto";
+
+async function getUserId(
+  authToken: AuthToken["value"]
+): Promise<UserPrivate["id"] | undefined> {
+  const db = await getDatabase();
+
+  return db.read().authTokens.find((item) => item.value === authToken)?.userId;
+}
 
 export async function create(userId: UserPrivate["id"]): Promise<AuthToken> {
   const db = await getDatabase();
@@ -20,34 +29,28 @@ export async function create(userId: UserPrivate["id"]): Promise<AuthToken> {
   return data;
 }
 
-export async function getUserId(
-  authToken: AuthToken["value"]
-): Promise<UserPrivate["id"] | undefined> {
-  const db = await getDatabase();
-
-  return db.read().authTokens.find((item) => item.value === authToken)?.userId;
-}
-
-export async function validate(value: AuthToken["value"] | undefined): Promise<{
+export async function getData(value: AuthToken["value"] | undefined): Promise<{
+  user: UserPublic | undefined;
   authToken: string | undefined;
   valid: boolean;
   error?: string;
 }> {
+  let error: string | undefined;
+
   const [, authToken] = value?.split("Bearer ") ?? [undefined];
 
-  const data = await new Promise<{
-    authToken: string | undefined;
-    valid: boolean;
-    error?: string;
-  }>((resolve) => {
-    setTimeout(() => {
-      resolve({
-        authToken,
-        valid: Boolean(authToken),
-        error: authToken ? undefined : "No auth token provided",
-      });
-    }, 200);
-  });
+  if (!authToken) error = "No auth token provided";
 
-  return data;
+  const userId = authToken ? await getUserId(authToken) : undefined;
+
+  if (!userId) error = "Invalid authentication token";
+
+  const user = userId ? await User.getById(userId, "public") : undefined;
+
+  return {
+    user,
+    authToken,
+    valid: Boolean(authToken && userId),
+    error,
+  };
 }
